@@ -14,8 +14,11 @@ mkdir -p "$TARGET"
 
 tmpd=$(mktemp -d /tmp/openapi-gen-bdd-XXXXXXX)
 
+# Work around bug: https://github.com/OpenAPITools/openapi-generator/issues/11763
+# export _JAVA_OPTIONS="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED"
+# But only required for the new python generator, not for python-prior
 # Generate a new openapi python client for use by the BDD tests
-openapi-generator-cli generate -i "$SPEC" -g python -o "$tmpd" --additional-properties packageName="openapi"
+openapi-generator-cli generate -i "$SPEC" -g python-prior -o "$tmpd" --additional-properties packageName="openapi"
 
 mv "$tmpd"/openapi/* "$TARGET"
 rm -rf "$tmpd"
